<resources>
    <string name="app_name">Cardoso &amp; Britz Burger</string>
    <string name="navegacao_cardapio">Cardápio</string>
    <string name="navegacao_pedidos">Pedidos</string>
    <string name="titulo_burger">Cardoso &amp; Britz Burger</string>
    <string name="endereco">Galeria Luza - R. Mal. Floriano Peixoto, 185</string>
    <string name="entrega"><b>ENTREGA</b>\n35min - 50min</string>
    <string name="retirada"><b>RETIRADA</b>\n30min</string>
    <string name="classic_burgers">Classic Burgers</string>
    <string name="special_burgers">Special Burgers</string>
    <string name="drinks">Bebidas</string>
    <string name="add">Adicionar</string>
    <string name="remover">Remover</string>
    <string name="cancelar">Cancelar</string>
    <string name="title_activity_carrinho">CarrinhoActivity</string>
    <string name="ok">Ok</string>

</resources>